Akka HTTP – almost complete service

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,8 @@ akka {
 
 reactive-flows {
   api {
-    address = "0.0.0.0"
-    port    = 8000
+    address             = "0.0.0.0"
+    port                = 8000
+    flow-facade-timeout = 1 s
   }
 }
