--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,5 +11,6 @@ reactive-flows {
     address             = "0.0.0.0"
     port                = 8000
     flow-facade-timeout = 1 s
+    event-buffer-size   = 100
   }
 }
