Akka Distributed Data

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,27 @@ akka {
   loglevel         = debug
   log-dead-letters = off
   stdout-loglevel  = info
+
+  actor {
+    provider = akka.cluster.ClusterActorRefProvider
+  }
+
+  // The following settings are for super fast automatic removal of unreachable nodes and not suitable for production!
+  cluster {
+    auto-down-unreachable-after       = 0 s
+    unreachable-nodes-reaper-interval = 250 ms
+
+    failure-detector {
+      acceptable-heartbeat-pause = 1 s
+      hearbeat-interval          = 250 ms
+      threshold                  = 4.0
+    }
+  }
+
+  extensions = [
+    akka.cluster.ddata.DistributedData,
+    de.heikoseeberger.constructr.akka.ConstructrExtension
+  ]
 }
 
 reactive-flows {
