Akka Cluster Sharding

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,12 @@ akka {
     provider = akka.cluster.ClusterActorRefProvider
   }
 
+  cluster {
+    sharding {
+      remember-entities = on
+    }
+  }
+
   // The following settings are for super fast automatic removal of unreachable nodes and not suitable for production!
   cluster {
     auto-down-unreachable-after       = 0 s
@@ -23,8 +29,16 @@ akka {
 
   extensions = [
     akka.cluster.ddata.DistributedData,
+    akka.persistence.Persistence,
     de.heikoseeberger.constructr.akka.ConstructrExtension
   ]
+
+  persistence {
+    journal {
+      auto-start-journals = [""]
+      plugin              = cassandra-journal
+    }
+  }
 }
 
 reactive-flows {
@@ -33,5 +47,9 @@ reactive-flows {
     port                = 8000
     flow-facade-timeout = 1 s
     event-buffer-size   = 100
+  }
+
+  flow-facade {
+    shard-count = 20
   }
 }
