--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -1,4 +1,5 @@
 akka {
-  cluster.seed-nodes        = ["akka.tcp://MultiNodeFlowFacadeSpec@127.0.0.1:12551"]
-  remote.netty.tcp.hostname = "127.0.0.1"
+  cluster.seed-nodes         = ["akka.tcp://MultiNodeFlowFacadeSpec@127.0.0.1:12551"]
+  persistence.journal.plugin = akka.persistence.journal.inmem
+  remote.netty.tcp.hostname  = "127.0.0.1"
 }
