--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,1 +1,4 @@
-akka.remote.netty.tcp.port = 0
+akka {
+  persistence.journal.plugin = akka.persistence.journal.inmem
+  remote.netty.tcp.port      = 0
+}
